Content alignment css issues

--- a/css/landingpage.css
+++ b/css/landingpage.css
@@ -10,8 +10,24 @@
   text-align: left;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  margin-top: 8%;
 }
-
+.space-around {
+  justify-content: space-around;
+}
+ .prototype_content {
+  width: 100%;
+ }
+ .prototype_content h2 {
+  line-height: 1em !important;
+  text-align: center;
+}
+.headingP{
+  margin-top: 8%;
+}
+.webContent .container {
+  margin-top: 4%;
+}
 .footer_top {
   border: 0;
 }
@@ -140,8 +156,6 @@
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (max-width: 728px) and (min-width: 320px) {}
-
 .social_icons .social_icons_desktop {
   display: none;
 }
@@ -236,6 +250,9 @@
 }
 
 @media screen and (max-width: 900px) and (min-width: 320px) {
+  .webContent .container {
+    margin-top: 12%;
+  }
   .quote_form {
     width: 100%;
     top: auto;
@@ -350,11 +367,13 @@
     height: 50px;
     left: 0;
   }
-
+  .prototype_content {
+    width: 100%;
+  }
   .prototype_content h2 {
     line-height: 1em !important;
+    text-align: center;
   }
-
   .prototype_content p {
     line-height: 1.4rem;
   }
